# SecurityModule

./: .gitignore  MANIFEST.in  README.md  angleChangingCheck.py  checkAnglesVariation.py  checkDistanceBetweenJoint.py  collisonWithItselfCheck.py  collison_all._backup.json  custom_traj.json  docker-compose.yml  findJointsPosition.py  forceRobotChecking.py  forwardKinematics.py  globalRobotChecking.py  goblalRobotChecking.py  manualCheckingRobotPositon.py  notes.md  pyproject.toml  readme.md  realTimeCheckingExample.py  requirements.txt  robotPositionChecking.py  setup.py  traj_collision_with_itself.json  unitTests.py  unitTestsCollisonWithTheGround.py  unitTestsFk.py  unitTestsWorkingArea.py  workingAreaChecking.py
FKinematics/: forwardKinematics.py  unitTests.py
forwardKinematics/: forwardKInematics.py  unitTests.py
security/: __init__.py  angles  checkAnglesVariation.py  collisionChecking.py  collisionWithItselfCheck.py  collisonWithItselfCheck.py  forwardKinematics.py  globalRobotChecking.py  interpolation.py  iscoin_azz.urdf  loadUrdf.py  manualCheckingRobotPositon.py  manualExample.py  realTimeCheckingExample.py  robotPositionChecking.py  test.py  test_collisionChecking.py  test_collision_ground.py  test_collisonWithItself.py  test_forwardKinematics.py  test_interpolation.py  test_workingArea.py  workingAreaChecking.py
security.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: custom_traj.json  test_collision_all.json  traj_test.json
test2/: ahahah.md
urbasic/: setup.py
workingAreaTest/: unitTests.py  workingAreaChecking.py
(+24 files in other folders)
