[project]
name = "security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "plotly>=6.0.1",
    "pybullet>=3.2.7",
    "simulator",
    "urbasic",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
[tool.setuptools]
packages = ["security"]

[tool.setuptools.package-data]
security = ["urdf/*.urdf", "urdf/collision/*.stl", "urdf/visual/*.dae"]

[tool.uv.sources]
urbasic = { git = "https://github.com/6figuress/ur3e-control.git" }
simulator = { git = "https://github.com/6figuress/phys_simulator.git" }
